# season-me

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: example_output.txt
scripts/: train.py
season_me/: __init__.py  cli.py  colors.py  face.py  main.py  model.py
season_me/data/: classifier.pkl
tests/: test_main.py
